# GameManager

./: .editorconfig  .gitignore  DESIGN.md  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.agents/skills/gh-issues/: SKILL.md
.github/: release-drafter.yml
.github/workflows/: release.yml
docs/: plugin-system.md
src/: App.tsx  App.vue  main.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/engines/: electron.toml  gamemaker.toml  godot.toml  html.toml  other.toml  renpy.toml  rpgmakermv.toml  rpgmakermz.toml  rpgmakervx.toml  rpgmakervxace.toml  unity.toml  unreal.toml  wolf.toml
src-tauri/migrations/: 0001_init.sql  0002_add_profile_key.sql  0003_optimize_games_schema.sql
src-tauri/src/: lib.rs  nwjs.rs
src-tauri/src/commands/: cover.rs  cover_resolver.rs  engine.rs  game.rs  game_executable.rs  game_settings.rs  import.rs  launch.rs  legacy_detection.rs  mod.rs  platform.rs  scan.rs  scan_walk.rs  settings.rs  state.rs
src-tauri/src/commands/engine/: engine.rs  mod.rs
src-tauri/src/commands/extension/: integrations.rs
src-tauri/src/commands/game/: cover.rs  cover_resolver.rs  game.rs  game_executable.rs  game_settings.rs  import.rs  launch.rs  mod.rs
src-tauri/src/commands/platform/: mod.rs  platform.rs
src-tauri/src/commands/scan/: legacy_detection.rs  mod.rs  scan.rs  scan_walk.rs
src-tauri/src/commands/settings/: mod.rs  settings.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/engine/: context.rs  detection.rs  launch.rs  mod.rs  profile.rs  registry.rs
src-tauri/src/engines/: context.rs  detection.rs  launch.rs  profile.rs  registry.rs
src-tauri/src/model/: engine.rs  game.rs  mod.rs
src-tauri/src/models/: dto.rs  engine.rs  game.rs  mod.rs  settings.rs
src-tauri/src/service/: engine.rs  fs.rs  logger.rs  mod.rs
src-tauri/src/service/download/: nwjs.rs
src-tauri/src/service/extension/: integrations.rs  mod.rs
src-tauri/src/service/game/: launcher.rs  manager.rs  mod.rs
src-tauri/src/services/: archieve.rs  bottles.rs  db.rs  engine.rs  engine_manager.rs  fs.rs  game.rs  game_launcher.rs  game_manager.rs  launcher.rs  logger.rs  mod.rs  path.rs  utils.rs
src-tauri/src/services/archieve/: mod.rs
src-tauri/src/services/db/: mod.rs
src-tauri/src/services/download/: mkxpz.rs  mod.rs  nwjs.rs
src-tauri/src/services/extension/: bottles.rs  integrations.rs  mod.rs
src-tauri/src/services/game/: launcher.rs  manager.rs  mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/util/: mod.rs  path.rs  time.rs
src-tauri/src/utils/: mod.rs  path.rs
src/assets/: app.css
src/components/common/: AppLoader.tsx  ConfirmDeleteDialog.tsx  ConfirmDeleteDialog.vue  ErrorBoundary.tsx
src/components/games/: GameCard.tsx  GameCard.vue  GameGrid.tsx  GameGrid.vue  GameLibraryHeader.tsx  GameLibraryHeader.vue  GameSettingsDialog.tsx  GameSettingsDialog.vue  ImportDialog.tsx  ImportDialog.vue  ScanDialog.tsx  ScanDialog.vue
src/components/layout/: Sidebar.vue  TitleBar.vue
src/constants/: engines.ts
src/hooks/: useDialogState.ts  useDragDrop.ts  useEngineRegistry.ts  useGameLibraryActions.ts  useGames.ts  useMaintenanceActions.ts  usePersistedState.ts  useTaskStatus.ts  useTauriEvents.ts  useThemeMode.ts  useWindowControls.ts
src/i18n/: index.ts  types.ts
src/lib/: api.ts  tauri.ts  utils.ts
src/types/: engine.ts  game.ts  index.ts  settings.ts  ui.ts
src/utils/: format.ts
(+27 files in other folders)
