[package]
name = "gamemanager"
version = "0.3.1"
description = "A Tauri App for managing games"
authors = ["choco2333 <choco2333@outlook.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "s"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = true      # 确保移除调试符号。

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gamemanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
] }
reqwest = { version = "0.13", default-features = true, features = [
    "stream",
    "gzip",
] }
futures-util = "0.3"
zip = { version = "7", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
tempfile = "3"
pelite = "0.10"
